# ramanujan-formulas

./: .env.example  .gitignore  CLAUDE.md  DUAL_PROVIDER_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LATEST_IMPROVEMENTS.md  MATHEMATICAL_BREAKTHROUGH.md  PATTERN_ANALYSIS.md  README.md  README_USAGE.md  breakthrough_discovery.json  candidates.jsonl  discoveries.json  env.example  explore_breakthrough.py  fix_env.bat  fix_env.sh  main.py  main_curves.py  presentation.html  promising_expressions.json  pyproject.toml  render_curve.py  requirements.txt  run_smart_discovery.py  server.js  smart_discoveries.json  test_basic.py  test_imports.py  test_providers.py  update_env.py  verify_d190.py
.claude/: settings.local.json
plans/: implementation_plan.md
ramanujan_swarm/: __init__.py  config.py  constants.py
ramanujan_swarm/agents/: __init__.py  base_agent.py  curve_prompts.py  explorer.py  hybrid.py  mutator.py  prompts.py
ramanujan_swarm/gene_pool/: __init__.py  pool.py
ramanujan_swarm/graph/: __init__.py  graph_builder.py  nodes.py  state.py
ramanujan_swarm/math_engine/: __init__.py  curve_evaluator.py  curve_scorer.py  curve_types.py  deduplicator.py  elegance_scorer.py  evaluator.py  validator.py
ramanujan_swarm/reporting/: __init__.py  report_generator.py
ramanujan_swarm/verification/: __init__.py
results/: candidates.jsonl  discoveries.json
src/ramanujan_formulas/: README.md  __init__.py  __main__.py  agents.py  ai_novelty_critic.py  breakthrough_hunter.py  breakthrough_injector.py  config.py  creative_mathematician.py  fast_discovery_engine.py  genuine_discovery.py  graph.py  main.py  polylog_explorer.py  pslq.py  search_templates.py  smart_agent.py  stability_tester.py  symbolic_simplifier.py  trivial_filter.py  types.py  utils.py  verification.py
