[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ramanujan_swarm*"]
exclude = ["plans*", "outputs*", "tests*"]

[project]
name = "ramanujan-formulas"
version = "0.1.0"
description = "Autonomous Mathematical Discovery via Genetic Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LangGraph & LangChain
    "langgraph>=0.2.45",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-aws>=0.1.0",
    "langchain-core>=0.3.0",
    "boto3>=1.28.0",

    # High-precision mathematics
    "mpmath>=1.3.0",
    "sympy>=1.13.0",

    # Web scraping & API
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",

    # Data handling
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]
